--- a/网络.md
+++ b/网络.md
@@ -153,7 +153,148 @@ HMACSHA256(
 5. JWT Token 包含认证信息，为防止泄露，过期时间应设置较短
 6. JWT Token 不加密，不应该使用 HTTP 明文 传输，应使用 HTTPS
 
-## WebSocket
+## WebSocket(通信协议)
+
+### 诞生原因
+
+HTTP连接是单向的，只能由客户端发起，如果需要感知服务器的变化就需要轮询，效率低且浪费资源。
+
+因此被发明之后，其特点是：服务器与客户端均可以互相向对方发送消息，是完全的平等对话。
+
+![img](bg2017051502.png)
+
+基于 TCP 协议
+
+### 客户端 API
+
+#### WebSocket 构造函数
+
+```javascript
+var ws =  new WebSocket("ws://leetcode.com");
+```
+
+用于新建 WebSocket 实例。执行上面的语句，客户端就会与服务器建立连接。
+
+#### 属性
+
+**webSocket.readyState 属性**
+
+```javascript
+console.log("正在连接时的状态：" + ws.readyState)；
+// "正在连接时的状态：0"
+```
+
+返回实例对象的当前状态，共有四个值。
+
+| 状态       | 值   | 含义                 |
+| ---------- | ---- | -------------------- |
+| CONNECTING | 0    | 正在连接中           |
+| OPEN       | 1    | 已建立连接，可以通信 |
+| CLOSING    | 2    | 连接正在关闭         |
+| CLOSED     | 3    | 连接已关闭           |
+
+**webSocket.onopen 属性**
+
+实例对象的 `onopen` 属性，用于指定连接成功后的回调函数。
+
+**webSocket.onclose 属性**
+
+实例对象的 `onclose` 属性，用于指定连接关闭后的回调函数。
+
+**webSocket.onmessage 属性**
+
+实例对象的 `onmessage` 属性，用于指定收到服务器数据后的回调函数。
+
+**webSocket.bufferedAmount 属性**
+
+实例对象的 `bufferedAmount` 属性，用于判断客户端还有多少字节的二进制数据没有发出去，用于判断发送是否结束。
+
+**webSocket.onerror 属性**
+
+实例对象的 `onerror` 属性，用于指定报错时的回调函数。
+
+**webSocket.send() 方法**
+
+用于向服务器发送数据。
+
+使用示例：
+
+```javascript
+var ws = new WebSocket("ws://echo.websocket.org");
+
+console.log("正在连接时的状态：" + ws.readyState);
+
+// 单个写回调函数
+
+ws.onopen = function (evt) {
+  console.log("成功连接时的状态1：" + ws.readyState);
+  ws.send("hello server，this is client");
+}
+
+ws.onmessage = function (evt) {
+  console.log("收到服务器返回的数据1：" + evt.data);
+  ws.close(); // 关闭连接
+  console.log("正在关闭时的状态1：" + ws.readyState);
+}
+
+ws.onclose = function (evt) {
+  console.log("连接关闭后的状态1：" + ws.readyState);
+}
+
+/*
+"正在连接时的状态：0"
+"成功连接时的状态1：1"
+"收到服务器返回的数据1：hello server，this is client"
+"正在关闭时的状态1：2"
+"连接关闭后的状态1：3"
+*/
+```
+
+使用 WebSocket.addEventListener
+
+```javascript
+var ws = new WebSocket("ws://echo.websocket.org");
+
+console.log("正在连接时的状态：" + ws.readyState);
+
+
+// 监听事件
+
+ws.addEventListener("open", function (evt) {
+  console.log("成功连接时的状态2：" + ws.readyState);
+  ws.send("hello server，this is client");
+})
+
+ws.addEventListener("close", function (evt) {
+  console.log("连接关闭后的状态2：" + ws.readyState);
+})
+
+ws.addEventListener("message", function (evt) {
+  console.log("收到服务器返回的数据2：" + evt.data);
+  ws.close();
+  console.log("正在关闭的状态2：" + ws.readyState);
+})
+
+/*
+"正在连接时的状态：0"
+"成功连接时的状态2：1"
+"收到服务器返回的数据2：hello server，this is client"
+"正在关闭的状态2：2"
+"连接关闭后的状态2：3"
+*/
+```
+
+### WebSocket 服务器
+
+常用 node 实现有以下三种：
+
+1. [µWebSockets](https://github.com/uWebSockets/uWebSockets)
+2. [Socket.IO](http://socket.io/)
+3. [WebSocket-Node](https://github.com/theturtle32/WebSocket-Node)
+
+WebSocket 服务器：[Websocketd](http://websocketd.com/)
+
+
 
 # cookie的缺点
 
@@ -162,3 +303,35 @@ HMACSHA256(
 # CDN理解
 
 # 缓存
+
+# 安全
+
+## 中间人攻击
+
+**中间人攻击的过程**大致如下：
+
+1. 服务器向客户端发送公钥A，被攻击者截获，攻击者向客户端发送假公钥B。
+2. 客户端收到假公钥B后，使用公钥B对内容（后面对称加密的密钥X）加密并发送
+3. 攻击者截取加密报文后，使用自己的私钥B1解开，获取对称加密的密钥X。再使用原来的公钥A加密一个假的密钥Y并发送给服务器。
+4. 服务器收到报文后解密，获取假的密钥Y，后面服务器会用假密钥Y加密传输信息。
+
+防范方法：
+
+服务端发送给浏览器公钥时，加入CA证书，浏览器验证CA证书的有效性。
+
+浏览器校验CA证书的有效性：
+
+1. 校验证书的颁发机构是否信任
+2. 证书是否被吊销（通过CRL/OCSP）
+3. 判断证书是否过期（对比系统时间）
+4. 校验对方是否存在证书的私钥
+5. 判断证书的网站域名是否与证书颁发的域名一致
+
+## DNS 劫持
+
+又名：DNS 重定向、域名劫持，是DNS查询没有得到正确的解析，以致引导用户访问到恶意网站。
+
+DNS劫持现象：输入google网址，出现baidu页面。
+
+HTTP劫持现象：访问着github页面，右下角出现弹窗小广告。
+
