--- a/网络.md
+++ b/网络.md
@@ -329,9 +329,33 @@ WebSocket 服务器：[Websocketd](http://websocketd.com/)
 
 ## DNS 劫持
 
-又名：DNS 重定向、域名劫持，是DNS查询没有得到正确的解析，以致引导用户访问到恶意网站。
+又名：DNS 重定向、域名劫持，是 DNS 查询没有得到正确的解析，以致引导用户访问到恶意网站。
 
 DNS劫持现象：输入google网址，出现baidu页面。
 
 HTTP劫持现象：访问着github页面，右下角出现弹窗小广告。
+
+### DNS 解析原理
+
+分级查询，查询顺序为：根域名——顶级域名——次级域名(用户注册)——主机名/三级域名
+
+域名 = 主机名.次级域名.顶级域名.根域名
+
+本机执行命令： `dig +trace math.stackexchange.com`，查看域名解析过程。
+
+1. 向本地域名解析服务器发送请求，查询解析 `.root` 的根域名服务器（已经内置在本地）
+2. 向所有的根域名服务器发送请求，查询 `com.` 域名，根域名服务器返回所有解析 `com.` 的域名解析服务器。下述示例中  `Received 1182 bytes from 192.203.230.10#53(e.root-servers.net) in 161 ms` 返回最快。
+3. 向所有 `com.` 的域名解析服务器发送请求，查询 `stackexchange.com.`的 IP 地址
+4. 向所有 `stackexchange.com.` 的域名解析服务器发送请求，查询 `math.stackexchange.com.` 的 IP 地址。
+5. 查到指定域名的 IP 地址，查询结束。
+
+![image-20201217215740874](image-20201217215740874.png)
+
+有图可知，114.114.114.114:53 是本机的域名解析服务器，53 是默认端口。NS = Name Server，A = Address。
+
+Mac 的DNS 服务器 IP 地址保存在 `/etc/resolv.conf` 中。
+
+### DNS 劫持方法
+
+DNS 解析每一步出问题，都可能导致解析失败。
 
