浏览器渲染

--- a/网络.md
+++ b/网络.md
@@ -1,3 +1,122 @@
+
+
+# 浏览器
+
+## 多进程架构
+
+### 单进程浏览器
+
+浏览器所有功能模块（JS运行环境+页面渲染+页面展示+插件+网络）都在通过一个进程中。
+
+![img](images/浏览器单进程.image)
+
+### 多进程优点
+
+- 进程之间隔离，一个页面崩溃不会影响其他页面
+- JS 运行在渲染进程中，阻塞也仅会阻塞渲染进程，只会影响本页面
+- Chrome 渲染进程和插件进程运行在安全沙箱里，保证安全性。
+
+### 当前 Chrome 多进程架构浏览器
+
+1. 浏览器进程
+
+   主要负责界面显示、用户交互、子进程管理，同时提供存储等功能。
+
+2. GPU加速进程
+
+   加速 UI 渲染	
+
+3. 渲染进程
+
+   主要是将 html/css/js 转换成用户可以交互的网页，默认情况下 chrome 会为每个 Tab 页创建一个渲染进程，渲染进程都运行在沙箱模式下。
+
+4. 网络进程
+
+   加载网络资源。
+
+5. 插件进程
+
+   负责插件的运行/隔离。因为插件容易崩溃，利用插件进程来保证插件进程崩溃不影响到浏览器的其他进程。
+
+![img](images/浏览器多进程.image)
+
+## 渲染过程
+
+构建 DOM 树→样式计算→生成布局树→分层→分块→光栅化→合成
+
+### 构建 DOM 树
+
+1. html 词法分析为 token
+2. token 解析为 dom 节点，并添加至 dom 树
+
+### 样式计算
+
+和 html 类似，CSS Parser 会手机所有的 CSS 规则，解析为 CSSOM。
+
+1. 找到所有的 CSS 样式
+2. 将其标准化
+3. 给 DOM 树节点添加 CSS 样式，生成带样式的 DOM 树
+
+### 生成布局树
+
+给 DOM 树节点添加标识其几何位置的信息。
+
+以 flex 布局为例，模拟在 flex 布局中如何计算元素的具体位置。
+
+### 分层 layer
+
+渲染进程将一些复杂的动画等生成专门的图层，并生成图层树，给 GPU 加速渲染。节点需要满足一些条件，渲染进程才会为其创建新的图层。
+
+### 分块渲染
+
+网页缓存是一小块一小块的，通常为 256\*256 或者 512\*512，称之为分块渲染。
+
+原因：
+
+- GPU 加速对缓存大小有要求，不能太大
+- 方便浏览器使用统一的缓存池来管理分配的缓存，缓存池一般分配成成百上千个缓存块供所有 WebView 共用。不可见或者关闭的网页的缓存块被回收，需要时再以缓存块为单位向缓存池申请。
+
+
+
+### 光栅化/栅格化
+
+将图块转换为位图的过程，图块是栅格化的最小单位。
+
+### 合成
+
+图块被栅格化完成，合成线程生成绘制图块的指令，合成器渲染，输出像素点到屏幕。
+
+#### 重排
+
+更新元素几何属性，更新整个渲染流程，开销最大。
+
+![img](images/重排.image)
+
+#### 重绘
+
+更新元素的绘制属性，省去了布局与分层阶段，处理过程更少。
+
+![img](images/重绘.image)
+
+#### 合成
+
+相较于重排与重绘，合成大大提升绘制效率。
+
+触发 GPU 加速的属性（属性计算繁重）：
+
+- transform:translate3d（）或 translateZ()
+- opacity
+- filter
+- will-change
+
+![img](images/合成.image)
+
+### 性能指标
+
+[LCP](https://web.dev/optimize-lcp/)：衡量视口内渲染的最大内容元素渲染时间的指标。
+[FID](https://web.dev/fid/)：从用户第一次与页面进行交互,到浏览器实际上能够开始处理程序的时间。
+[CLS](https://web.dev/cls/)：测量页面发生布局偏移的总和
+
 # HTTP
 
 ## 输入 url 到展示
@@ -52,11 +171,19 @@ B 网页（http://test2.example.com/b.html）设置 `document.domain="example.co
 
 A 网页设置 `document.cookie = "hello"`，B 网页可进行读取 `let cookie = document.cookie`。
 
-## CORS（跨域资源共享 Cross-Origin resource sharing W3C标准）
+## CORS（Cross-Origin resource sharing W3C标准）
+
+跨域资源共享。
 
 允许浏览器向跨源服务器发出 XMLHttpRequest 请求，克服AJAX只能同源使用的限制。
 
-## JWT (JSON Web Tokens 跨域认证解决方案)
+## JSONP(JSON with Padding)
+
+JSON 的一种“使用模式”，可以让网页从别的域名/网站那里获取数据，即跨域读取数据。
+
+## JWT (JSON Web Tokens)
+
+跨域认证解决方案。
 
 ### 用户认证
 
