--- a/网络.md
+++ b/网络.md
@@ -1,5 +1,39 @@
 # HTTP
 
+## TLS/SSL
+
+TLS 是 SSL 标准化后的名称，两者是同一个东西的不同阶段。
+
+SSL 主要用途：
+
+1. 认证客户端与服务器，确保数据发到正确的客户端与服务器。
+2. 加密数据防止传输中被窃取
+3. 保证传输中数据的完整性
+
+特性：
+
+1. 机密性：SSL 使用密钥加密数据
+2. 可靠性：服务器与客户端都会被认证，客户的认证可选
+3. 完整性：SSL 协议会对数据进行完整性检查
+
+## CA 签发证书
+
+确保访问的是正确网站且访问到正确数据，除了保证传输安全，还要保证目标网站正确。建设 PKI 基础设施，通过第三方认证网站。
+
+PKI = CA(认证中心)+RA(注册中心)+DS(目录服务)服务器
+
+申请证书流程：RA 负责用户的证书申请 → CA  处理并发出证书且公示在 DS 中
+
+检验证书合法性：
+
+- 证书的信任关系
+- 证书本身正确性
+- 证书状态，通过 Certificate Revocation List(CRL) 查看证书是否被废弃
+
+通过 OpenSSL 可以生成 TLS/SSL 传输时需要认证的公私钥，权威的还需要到 PKI 申请。
+
+
+
 ## 输入 url 到展示
 
 ## http/https 区别
@@ -313,6 +347,35 @@ WebSocket 服务器：[Websocketd](http://websocketd.com/)
 # 缓存
 
 # 安全
+
+## XSS
+
+跨站脚本（Cross-Site Scripting，XSS），与 CSS 区分。
+
+原因：网站没有对用户输入做严格限制，攻击者可以将输入脚本让其他人浏览到有恶意脚本的页面，注入方式包括不限于 JS/VBScript/CSS/Flash等。
+
+当其他人浏览到包含恶意脚本的网页时，就会执行恶意脚本，对用户进行 Cookie 窃取、会话劫持、钓鱼欺骗等攻击。
+
+Cookie 窃取：JS 脚本手机用户环境的信息（Cookie），通过图片、触发事件等传输用户数据至攻击者服务器。
+
+钓鱼欺骗：利用脚本进行视觉欺骗，构建假的恶意 button 覆盖真实情况。
+
+示例：
+
+```html
+<script>alert('xss')</script>
+```
+
+## CSRF
+
+跨站请求伪造（Cross-Site Request Forgery），利用你在 A 站（攻击目标）的 cookie/权限等，在 B 站拼装 A 站的请求。
+
+同源策略是最早用于防止 CSRF 的一种方式。
+
+预防：
+
+1. 同源检查。网站检查 http 请求的 header，主要是 Origin 和 Referer
+2. CSRF token。对于需要预防的请求，使用特殊算法生成 token 存在session 中，请求时带上 token 在服务端认证，避免跨站请求。
 
 ## 中间人攻击
 
