--- a/网络.md
+++ b/网络.md
@@ -199,13 +199,21 @@ HMACSHA256(
 
 ### 诞生原因
 
-HTTP连接是单向的，只能由客户端发起，如果需要感知服务器的变化就需要轮询，效率低且浪费资源。
+HTTP 连接是单向的，HTTP 协议是一个请求-响应协议，只能由客户端发起，如果需要感知服务器的变化就需要轮询，效率低且浪费资源。
 
-因此被发明之后，其特点是：服务器与客户端均可以互相向对方发送消息，是完全的平等对话。
+H5 新增协议，主要特点是：服务器与客户端均可以互相向对方发送消息，是完全的平等对话，全双工通信。
 
 ![img](bg2017051502.png)
 
-基于 TCP 协议
+### 特点
+
+1. WebSocket 连接必须由浏览器发起
+2. 基于 TCP 协议，服务端实现较容易
+3. 与 HTTP 协议有着良好的兼容性。默认端口也是 80 和 443，握手阶段采取 HTTP 协议，因此握手不容易被屏蔽，能通过各种 HTTP 代理服务器。
+4. 数据格式比较轻量，性能开销小，通信高效
+5. 可以发送文本或者二进制数据
+6. 没有同源限制，客户端可以与任意服务器通信
+7. 协议标识是 ws（加密 wss），服务器网址就是 URL
 
 ### 客户端 API
 
