--- a/浏览器.md
+++ b/浏览器.md
@@ -1,6 +1,4 @@
-# 浏览器
-
-## 网络与互联网
+# 网络与互联网
 
 互联网，连接所有实体计算机，使得彼此之间可以互相发送数据.
 
@@ -21,7 +19,7 @@ GET /index.html HTTP/1.1
 *传输控制协议* (TCP) ，互联网中的所有设备均使用这个协议，大多数通信都基于它.
 TCP 的工作方式: 一台计算机等待并监听，以便其他计算机与它建立连接. 一台机器为了同时监听不同类型的通信，每个监听器占用的端口都不同. 大多数协议都指定了它默认使用的端口. TCP 连接在服务器与客户端之间建立的双向管道，两端的机器都可以将数据放入其中，TCP 提供了网络的抽象.
 
-## Web
+# Web
 
 万维网 (World Wide Web) 是一组协议与格式(与互联网概念不同)，允许我们在浏览器中访问网页. `Web` 指的是这样的页面可以相互链接，形成巨大网格. 换句话说，Web 就是浏览器上能访问的网页的集合.
 
@@ -38,7 +36,7 @@ http://qicai.fengniao.com/list_1437.html
 
 在浏览器中键入该URL，首先找到域名对应的IP，然后使用 HTTP 协议与该 IP 对应的服务器建立连接，然后请求相应的资源，请求成功，服务器会发回文档，浏览器显示即可.
 
-## HTML
+# HTML
 
 HTML : 超文本标记语言(Hypertext Markup Language)，是用于网页的文档格式. 包含文本以及为文本提供结构的标签.
 
@@ -76,11 +74,11 @@ document.createTextNode(文本内容) // 创建文本节点
 document.createElement(标签名称) // 创建元素节点
 ```
 
-### 属性
+## 属性
 
 getAttribute setAttribute
 
-### 布局
+## 布局
 
 块元素: 占据文档的整个宽度
 
@@ -88,17 +86,17 @@ getAttribute setAttribute
 
 offsetWidth offsetHeight 属性表示元素占用的空间(以像素为单位)
 
-### 层叠样式表
+## 层叠样式表
 
 使用选择器语法
 
-### 查询选择器
+## 查询选择器
 
 querySelectorAll querySelector
 
 
 
-## HTTP 和表单
+# HTTP 和表单
 
 在浏览器输入 http://qicai.fengniao.com/list_1437.html 之后，浏览器首先会查询域名对应的IP地址，然后与其建立TCP连接，然后在80端口向服务器发送如下信息(请求).
 
@@ -108,7 +106,7 @@ Host: qicai.fengniao.com
 User-Agent: 浏览器名称
 ```
 
-### 请求
+## 请求
 
 请求方法 资源路径 浏览器使用的协议版本
 
@@ -136,7 +134,7 @@ POST: 发送信息
 Host: qicai.fengniao.com
 ```
 
-### 响应
+## 响应
 
 服务器回复如下信息(响应):
 
@@ -156,7 +154,7 @@ Last-Modified: Mon, 07 Jan 2020 22:29:54 GMT
 
 协议版本号 状态码 可读字符串
 
-状态码以2开头，表示请求成功，以4开头说明请求有问题，以5开头表示服务器有错误.
+状态码以 2 开头，表示请求成功，以 4 开头说明请求有问题，以 5 开头表示服务器有错误.
 
 用来指定请求或者响应的额外信息，下述表示响应文档的大小和类型以及该文档最后一次被修改的时间.
 
@@ -168,7 +166,7 @@ Last-Modified: Mon, 07 Jan 2020 22:29:54 GMT
 
 请求与响应报文，都可能包含空行，后面是正文.
 
-### 表单
+## 表单
 
 `HTML` 可能包含表单(允许用户填写信息)并将相关信息打包进 `HTTP` 请求中，浏览器随后会显示请求结果.
 
@@ -194,13 +192,13 @@ name=Mary&message=Yes%3F
 
 `GET` 请求应该用于没有副作用仅仅是要求信息的请求，更改服务器内容的请求应使用例如 `POST` 请求或者其他.
 
-
+# 浏览器
 
 ## 多进程架构
 
 ### 单进程浏览器
 
-浏览器所有功能模块（JS运行环境+页面渲染+页面展示+插件+网络）都在通过一个进程中。
+浏览器所有功能模块（JS运行环境+页面渲染+页面展示+插件+网络）都在一个进程中。
 
 ![img](images/浏览器单进程.image)
 
@@ -216,13 +214,13 @@ name=Mary&message=Yes%3F
 
    主要负责界面显示、用户交互、子进程管理，同时提供存储等功能。
 
-2. GPU加速进程
+2. GPU 加速进程
 
    加速 UI 渲染	
 
 3. 渲染进程
 
-   主要是将 html/css/js 转换成用户可以交互的网页，默认情况下 chrome 会为每个 Tab 页创建一个渲染进程，渲染进程都运行在沙箱模式下。
+   主要是将 html/css/js 转换成用户可以交互的网页，默认情况下 Chrome 会为每个 Tab 页创建一个渲染进程，渲染进程都运行在沙箱模式下。
 
 4. 网络进程
 
@@ -233,8 +231,6 @@ name=Mary&message=Yes%3F
    负责插件的运行/隔离。因为插件容易崩溃，利用插件进程来保证插件进程崩溃不影响到浏览器的其他进程。
 
 ![img](images/浏览器多进程.image)
-
-## 浏览器存储
 
 ## 渲染过程
 
@@ -361,3 +357,269 @@ class RenderObject{
 [LCP](https://web.dev/optimize-lcp/)：衡量视口内渲染的最大内容元素渲染时间的指标。
 [FID](https://web.dev/fid/)：从用户第一次与页面进行交互,到浏览器实际上能够开始处理程序的时间。
 [CLS](https://web.dev/cls/)：测量页面发生布局偏移的总和
+
+## 浏览器存储
+
+### Cookie
+
+是服务器发送到浏览器的一小段数据，会在浏览器下次向同一服务器发送请求时带上一起发送给服务器。
+
+基于 HTTP 规范，用于识别用户，诞生之初是为了解决 HTTP 的无状态请求，用来记录用户的一些状态。
+
+- 会话状态管理（用户登录状态、购物车、游戏分数等）
+- 个性化设置（用户自定义设置、主题等）
+- 浏览器行为跟踪（如跟踪分析用户行为等）
+
+后来由于前端交互的需要，Cookie 也存储一些客户端数据。
+
+### webStorage
+
+HTML5 提供了两种在客户端存储数据的方法：`localStorage`、`sessionStorage`，挂载在 window 对象下。
+
+本地存储，不依赖于服务器，克服 Cookie 带来的一些限制。
+
+#### localStorage
+
+生命周期永久性。关闭浏览器，数据也不会消失，除非主动删除。
+
+```javascript
+// 保存数据到 localStorage
+localStorage.setItem('key', 'value');
+
+// 从 localStorage 获取数据
+let data = localStorage.getItem('key');
+
+// 从 localStorage 删除保存的数据
+localStorage.removeItem('key');
+
+// 从 localStorage 删除所有保存的数据
+localStorage.clear();
+```
+
+#### sessionStorage
+
+- 在浏览器关闭前有效
+- 刷新页面数据不会消失
+- 只有在当前页面打开的链接，才可以访问 `sessionStorage` 中的数据
+
+```javascript
+// 保存数据到 sessionStorage
+sessionStorage.setItem('key', 'value');
+
+// 从 sessionStorage 获取数据
+let data = sessionStorage.getItem('key');
+
+// 从 sessionStorage 删除保存的数据
+sessionStorage.removeItem('key');
+
+// 从 sessionStorage 删除所有保存的数据
+sessionStorage.clear();
+```
+
+### 三者比较
+
+| 存储方式       | 作用与特性                                                   | 存储数量及大小                                               |
+| -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| Cookie         | 1. 存储用户信息，依赖服务器 2. 可存储的数据有限，过大影响页面性能 3. 可设置过期时间 | 1. 最好控制在 4095 B，超出的数据会被忽略 2.  IE6 或更低版本最多存 20 个 cookie； IE7 及以上版本最多可以有 50 个；Firefox最多 50个；chrome 和 Safari没有做硬性限制。 |
+| localStorage   | 1. 存储客户端信息，不依赖于服务器 2. 数据永久保存，除非用户手动删除 3. 开发者可以自行封装方法，设置失效时间 | 5M左右                                                       |
+| sessionStorage | 1. 存储客户端信息，不依赖于服务器 2. 数据保存在当前会话，结束会话（关闭页面、跳转页面、退出浏览器）数据失效。 | 5M左右                                                       |
+
+## 跨标签通信
+
+主要利用两种方式：
+
+1. 浏览器存储：本地存储
+2. 服务器方式：主要使用 websocket 技术使**多页签都监听服务器推送事件**来获取其他页面发送的数据。
+
+### 浏览器存储
+
+#### localStorage
+
+在 A 标签页中使用 `localStorage.setItem(key, value)`添加（修改、删除）内容（原有内容不变也不会触发），在 B 标签页（注意：非当前页面）中监听 `storage` 事件，即可得到 `localStorage` 存储的值，实现不同标签页之间的通信。
+
+```javascript
+// 添加
+localStorage.setItem(key,value) 
+// 删除
+localStorage.removeItem(key,value) 
+// 添加监听 storage 的变化
+window.onload = function () {
+  window.addEventListener('storage', function (event) {
+    // event 事件对象包含 domain newValue oldValue key      
+    console.log(event.key + '=' + event.newValue);
+  })
+}
+```
+
+#### Cookie + setInterval
+
+将要传递的信息存储在 `Cookie` 中，每隔一定时间读取 Cookie 信息，即可随时获取要传递的信息。
+
+A 标签页将要传递的信息存在 `Cookie` 中，B 标签页设置 `setInterval` 定时循环读取 `Cookie`。
+
+```javascript
+// 设置 
+cookiedocument.cookie = "name=" + name;
+
+// 获取 
+cookiefunction getCookie(key) {  
+  const _string = '{"';  
+  _string += document.cookie.replace(/;\s+/gim, '","').replace(/=/gim, '":"');  
+  _string += '"}'[key];  
+  return JSON.parse(_string);
+}
+```
+
+### 监听服务器事件
+
+#### websocket 通信
+
+监听服务器事件
+
+```javascript
+var ws = new WebSocket("ws://echo.websocket.org");
+
+ws.onopen = function (evt) {
+  console.log("成功连接时的状态：" + ws.readyState);
+  ws.send("hello server，this is client");
+}
+
+ws.onmessage = function (evt) {
+  console.log("收到服务器返回的数据：" + evt.data);
+}
+```
+
+#### HTML5 浏览器新特性 SharedWorker
+
+WebWorker：浏览器提供的额外线程，执行一些 JS 代码，不会影响到浏览器用户界面。直接使用 `new worker()` 创建，只能当前页面使用。
+
+SharedWorker：可以多个标签页、iframe 共同使用。`SharedWorker` 被多个 `window` 共同使用，但必须保证这些标签页都是同源的（相同协议、域名、端口号）。
+
+示例服务器端代码：
+
+WebWorker 无法在本地使用，需要置于服务器上。
+
+新建一个 JS 文件 worker.js
+
+```javascript
+// shareWorker 所要用到的js文件，不必打包到项目中，直接放到服务器即可
+let data = " ";
+let onconnect = function (event) {  
+  let port = event.ports[0];  
+  // WebWorker 端只需注册一个 onmessage 监听信息的事件
+  // 客户端（使用 SharedWorker 的标签页）发送 message 时就会触发
+  port.onmessage = function (e) {    
+    if (e.data === "get") {      
+      port.postMessage(data);    
+    } else {      
+      data = e.data;    
+    }  
+  };
+};
+```
+
+示例客户端代码：
+
+```javascript
+try {  
+  var worker = new SharedWorker("worker.js");  
+  var getBtn = document.getElementById("get");  
+  var setBtn = document.getElementById("set");  
+  var txt = document.getElementById("txt");  
+  var log = document.getElementById("log");  
+  // 接受到 WebWorker 端的数据
+  worker.port.addEventListener("message", function (e) {    
+    log.innerHTML = e.data;    
+    console.log(" --- 获取到数据 e.data --- ", e.data);  
+  });  
+  worker.port.start();  
+  setBtn.addEventListener(    
+    "click",
+    function (e) {   
+      // 发送数据
+      worker.port.postMessage(txt.value);    
+    },    
+    false  
+  );  
+  getBtn.addEventListener(    
+    "click",    
+    function (e) {    
+      // 获取数据
+      worker.port.postMessage("get");    
+    },    
+    false  
+  );
+} catch (error) {  
+  console.log(" --- error --- ", error);
+}
+```
+
+## 浏览器缓存
+
+性能优化中简单高效的方式，可以缩短网页请求的时间、加快资源的加载、减少延迟。
+
+### 缓存位置
+
+四个位置，优先级不同，请求之前会依次查找，都没有命中的时候，才会发出请求。
+
+1. Service Worker
+2. Memory Cache
+3. Disk Cache
+4. Push Cache
+
+#### Service Worker
+
+特点：
+
+1. 运行在浏览器背后的独立线程，实现缓存功能
+2. 传输协议必须为 HTTPS，涉及请求拦截
+3. 与浏览器其他内建的缓存机制不同的是，可以由用户控制：
+   1. 缓存哪些文件
+   2. 如何匹配缓存
+   3. 如何读取缓存
+   4. 缓存持续性
+
+步骤：
+
+1. 注册 Service Worker
+2. 监听 install 事件后，缓存文件
+3. 用户发送请求之后，拦截请求，查询缓存是否存在目标资源，有的话直接读取缓存文件，否则请求数据
+
+
+
+#### Memory Cache
+
+内存中的缓存，主要是当前页面已经有的资源，比如页面上已经下载的样式、脚本、图片等。
+
+高效但持续性短，当 Tab 页被关闭时，内存中的缓存同时释放。
+
+#### Disk Cache
+
+硬盘缓存，读取速度慢点但是容量大时效长。
+
+根据 HTTP Header 中字段判断
+
+- 哪些资源需要缓存
+- 哪些资源不请求直接使用
+- 哪些资源过期需要重新请求
+
+#### Push Cache
+
+推送缓存，是 HTTP2 中的内容，以上三种都没有命中时，才会被使用。只在会话（session）中存在，一旦会话结束就被释放，缓存时间短。
+
+### 缓存过程
+
+### 缓存策略
+
+### 实际应用场景
+
+### 用户行为影响
+
+https://www.jianshu.com/p/54cc04190252
+
+
+
+
+
+
+
