--- a/浏览器.md
+++ b/浏览器.md
@@ -431,7 +431,7 @@ sessionStorage.clear();
 1. 浏览器存储：本地存储
 2. 服务器方式：主要使用 websocket 技术使**多页签都监听服务器推送事件**来获取其他页面发送的数据。
 
-### 浏览器存储
+### 方式 1：浏览器存储
 
 #### localStorage
 
@@ -470,11 +470,11 @@ cookiefunction getCookie(key) {  
 }
 ```
 
-### 监听服务器事件
+### 方式 2：监听服务器事件
 
-#### websocket 通信
+#### WebSocket 通信
 
-监听服务器事件
+监听服务器事件，两个页面均新建同一个 WebSocket 连接，一个页面上传数据，一个页面监听并接受数据，实现跨标签页的通信。
 
 ```javascript
 var ws = new WebSocket("ws://echo.websocket.org");
@@ -582,7 +582,7 @@ try {  
 步骤：
 
 1. 注册 Service Worker
-2. 监听 install 事件后，缓存文件
+2. 监听 `install` 事件后，缓存文件
 3. 用户发送请求之后，拦截请求，查询缓存是否存在目标资源，有的话直接读取缓存文件，否则请求数据
 
 
@@ -609,17 +609,300 @@ try {  
 
 ### 缓存过程
 
+第一次发起 HTTP 请求，浏览器对于缓存的处理是根据第一次请求资源时返回的响应头来确定的。
+
+![img](webp)
+
+浏览器缓存机制的关键，确保每个请求的缓存的存入与读取：
+
+- 浏览器每次请求前都会去浏览器缓存中查找是否有请求的结果以及缓存标识
+- 浏览器每次拿到返回的请求结果后，都会将该结果和缓存标识存入浏览器缓存中。
+
 ### 缓存策略
+
+根据是否需要向服务器重新发送请求，将缓存过程分为两个部分，强缓存与协商缓存。
+
+#### 强缓存
+
+不会向服务器发送请求，直接从缓存中读取资源。
+
+通过设置两种 HTTP Header 实现：`Expires` 和 `Cache-Control`。
+
+判断是否缓存资源：判断**资源是否超出某个时间或者时间段**，但是无法判断服务端的资源是否更新（协商缓存功能）。
+
+##### Expires（HTTP 1.0）
+
+资源过期时间，服务器时间点。在服务器返回报文中消息头中指定，告诉浏览器在过期时间以前都可以从浏览器缓存中读取而无需再次请求。
+
+##### Cache-Control（HTTP 1.1 优先级高于前者）
+
+控制网页缓存。
+
+例如当 `Cache-Control:max-age=300` 时，代表请求返回成功后的 5 min 内再次请求该资源，就会命中强缓存。`Cache-Control` 可以在请求头或者响应头中设置，可以组合使用多种指令，默认取值是 `private`。
+
+![img](webp-20201222205548862)
+
+#### 协商缓存
+
+强缓存失效后，浏览器携带缓存标识向服务器发送请求，由服务器根据缓存标识决定是否使用缓存的过程。
+
+情况1：协商缓存生效，返回 `304` 和 `Not Modified`
+
+![img](webp-20201222210433409)
+
+情况2：协商缓存失效，返回 `200` 和请求结果
+
+![img](webp-20201222210503005)
+
+通过设置两种 HTTP Header 实现：`Last-Modified` 和 `ETag`。
+
+##### Last-Modified
+
+第一次请求后缓存数据，后面再请求时，先发请求校验资源是否更新。服务器将请求 `header` 中的 `If-Modified-Since` 字段的时间与服务器中这个资源的最后修改时间对比，相同则未更新，返回 `304`，不同则已更新，返回 `200` 和新的资源文件。
+
+![img](webp-20201222210901798)
+
+缺陷：
+
+- 本地打开缓存文件会导致 Last-Modified 被修改，服务器比对时间不一致，不能命中缓存，会重新发送资源。
+- Last-Modified 以秒计时，服务器端资源在小于秒的时间范围内文件被修改，最后修改时间仍未改变，则仍会认为命中缓存，不能返回最新文件。
+
+##### ETag
+
+由于前者的一些缺陷，于是设计直接根据资源内容是否被修改来确定缓存策略。
+
+ETag ：服务器响应请求时，返回资源文件的唯一标识（服务器生成），一旦资源有修改，`ETag` 就会重新生成。
+
+再次请求的 `header` 中的 `If-None-Match` 字段携带上一次该资源的 `ETag`。
+
+![img](webp-20201222212321708)
+
+##### 两者比较
+
+精确度：ETag > Last-Modified
+
+优先级：ETag > Last-Modified，服务器校验优先考虑 ETag。
+
+性能：ETag < Last-Modified，ETag 需要算法生成。
+
+### 缓存机制
+
+强缓存优于协商缓存进行，强缓存生效则直接使用缓存，失效则进行协商缓存。
 
 ### 实际应用场景
 
+频繁变动的资源
+
+```
+Cache-Control: no-cache
+```
+
+不常变动的资源
+
+```html
+Cache-Control: max-age=31536000
+```
+
 ### 用户行为影响
 
-https://www.jianshu.com/p/54cc04190252
+用户在浏览器的操作，触发的缓存策略：
+
+- 打开网页输入地址：查找 disk cache，无则发送请求
+- 普通刷新：tab 未关闭，memory cache，其次 disk cache
+- 强制刷新：浏览器不使用缓存，因此发送的请求头中均带有  `Cache-control: no-cache`(为了兼容，还带了 `Pragma: no-cache`)，服务器直接返回 `200` 和最新内容。
 
 
 
+参考：https://www.jianshu.com/p/54cc04190252
 
+## 浏览器事件流
 
+从页面中接受事件的顺序，IE（事件冒泡流）、NetScape（事件捕获流） 提出的事件流完全相反。
 
+### IE（事件冒泡流）
 
+从最具体元素开始，逐渐向上传播至文档节点。
+
+![img](1)
+
+点击下述页面的按钮，依次弹出 1、2、3。
+
+```html
+<!DOCTYPE html>
+<html>
+  <body>
+    <button id="myButton">点击按钮</button>
+  </body>
+  <script>
+    document.getElementById('myButton').addEventListener(
+      'click',
+      function(ev) {
+        alert(1);
+      },
+      false
+    );
+    document.body.addEventListener(
+      'click',
+      function(ev) {
+        alert(2);
+      },
+      false
+    );
+    document.addEventListener(
+      'click',
+      function(ev) {
+        alert(3);
+      },
+      false
+    );
+  </script>
+</html>
+
+```
+
+> addEventListener(EventName, Callback, BoolVal)
+>
+> 为DOM2级事件处理程序，它接受三个参数：要处理的事件名、作为事件处理程序的函数和一个布尔值。
+>
+> 最后这个布尔值参数如果是 true，表示在捕获阶段调用事件处理程序；如果是 false，表示在冒泡阶段调用事件处理程序。
+
+### NetScape（事件捕获流）
+
+从文档节点开始，逐渐向下传播至最具体元素。
+
+![img](1-20201222214616068)
+
+点击下述页面的按钮，依次弹出 3、2、1。
+
+```html
+<!DOCTYPE html>
+<html>
+  <body>
+    <button id="myButton">点击按钮</button>
+  </body>
+  <script>
+    document.getElementById('myButton').addEventListener(
+      'click',
+      function(ev) {
+        alert(1);
+      },
+      true
+    );
+    document.body.addEventListener(
+      'click',
+      function(ev) {
+        alert(2);
+      },
+      true
+    );
+    document.addEventListener(
+      'click',
+      function(ev) {
+        alert(3);
+      },
+      true
+    );
+  </script>
+</html>
+
+```
+
+### DOM 事件流
+
+“DOM2 级事件”标准中规定，事件流包括三个阶段：事件捕获阶段、处于目标阶段和事件冒泡阶段。
+
+现在 IE9、Opera、Firefox、Chrome 和 Safari 都支持 DOM 事件流。
+
+![img](1-20201222215455580)
+
+点击下述页面的按钮，依次弹出 2、1、3。
+
+事件处理顺序是先处理捕获阶段的事件，再处理冒泡阶段的事件。
+
+下述代码，`button` 元素的点击事件与 `document` 元素的点击事件都放在了冒泡阶段，`body` 元素的点击事件放在了捕获阶段。
+
+```html
+<!DOCTYPE html>
+<html>
+  <body>
+    <button id="myButton">点击按钮</button>
+  </body>
+  <script>
+    // 冒泡阶段处理
+    document.getElementById('myButton').addEventListener(
+      'click',
+      function(ev) {
+        alert(1);
+      },
+      false
+    );
+    // 捕获阶段处理
+    document.body.addEventListener(
+      'click',
+      function(ev) {
+        alert(2);
+      },
+      true
+    );
+    // 冒泡阶段处理
+    document.addEventListener(
+      'click',
+      function(ev) {
+        alert(3);
+      },
+      false
+    );
+  </script>
+</html>
+```
+
+## Web Worker
+
+## 点击穿透
+
+上层元素监听 touchend 事件，导致元素消失，300 ms 后会触发 click 事件，触发下层元素的 click 事件。之所以有 300 ms 是因为为了检测用户是否要双击进行方法缩小操作。
+
+解决：
+
+1. 使用 `fastclick` 库
+
+   从此所有的点击事件都使用 `click`，没有 300ms 的延迟，也没有穿透问题
+
+   ```javascript
+   //引入fastclick
+   <script src="js/fastclick.min.js"></script>
+   
+   // 原生js初始化
+   if ('addEventListener' in document) {
+       document.addEventListener('DOMContentLoaded', function() {
+         // 传递 body 元素，对其以及其子元素均有效果
+           FastClick.attach(document.body);
+       }, false);
+   }
+   ```
+
+   
+
+2. 上层元素触发 `touchend` 后延迟 300 ms 后再消失
+
+3. 让下层元素短时间内无法触发 click 事件
+
+   CSS3 属性：`pointer-events`，先设置为 none 再设置为 auto。
+
+   ```javascript
+   // 当蒙层被点击的时候，下层元素就暂时使 click 失效
+   $('.mask').on('touchstart',
+   function() {
+       console.log('mask-touchstart');
+       $(this).css('display', 'none');
+       //让被覆盖元素无法响应click
+       $('.box').css('pointer-events', 'none');
+       //恢复被覆盖元素
+       setTimeout(function() {
+           $('.box').css('pointer-events', 'auto');
+       },
+       300);
+   })
+   ```
+
+   
