--- a/浏览器.md
+++ b/浏览器.md
@@ -611,7 +611,7 @@ try {  
 
 第一次发起 HTTP 请求，浏览器对于缓存的处理是根据第一次请求资源时返回的响应头来确定的。
 
-![img](webp)
+![img](images/缓存过程.jpg)
 
 浏览器缓存机制的关键，确保每个请求的缓存的存入与读取：
 
@@ -640,7 +640,7 @@ try {  
 
 例如当 `Cache-Control:max-age=300` 时，代表请求返回成功后的 5 min 内再次请求该资源，就会命中强缓存。`Cache-Control` 可以在请求头或者响应头中设置，可以组合使用多种指令，默认取值是 `private`。
 
-![img](webp-20201222205548862)
+![img](images/Cache-Control.jpg)
 
 #### 协商缓存
 
@@ -648,11 +648,11 @@ try {  
 
 情况1：协商缓存生效，返回 `304` 和 `Not Modified`
 
-![img](webp-20201222210433409)
+![img](images/协商缓存生效.jpg)
 
 情况2：协商缓存失效，返回 `200` 和请求结果
 
-![img](webp-20201222210503005)
+![img](images/协商缓存失效.jpg)
 
 通过设置两种 HTTP Header 实现：`Last-Modified` 和 `ETag`。
 
@@ -660,7 +660,7 @@ try {  
 
 第一次请求后缓存数据，后面再请求时，先发请求校验资源是否更新。服务器将请求 `header` 中的 `If-Modified-Since` 字段的时间与服务器中这个资源的最后修改时间对比，相同则未更新，返回 `304`，不同则已更新，返回 `200` 和新的资源文件。
 
-![img](webp-20201222210901798)
+![img](images/Last-Modified.jpg)
 
 缺陷：
 
@@ -675,7 +675,7 @@ ETag ：服务器响应请求时，返回资源文件的唯一标识（服务器
 
 再次请求的 `header` 中的 `If-None-Match` 字段携带上一次该资源的 `ETag`。
 
-![img](webp-20201222212321708)
+![img](images/ETag.jpg)
 
 ##### 两者比较
 
@@ -723,7 +723,7 @@ Cache-Control: max-age=31536000
 
 从最具体元素开始，逐渐向上传播至文档节点。
 
-![img](1)
+![img](images/冒泡.jpg)
 
 点击下述页面的按钮，依次弹出 1、2、3。
 
@@ -770,7 +770,7 @@ Cache-Control: max-age=31536000
 
 从文档节点开始，逐渐向下传播至最具体元素。
 
-![img](1-20201222214616068)
+![img](images/捕获.jpg)
 
 点击下述页面的按钮，依次弹出 3、2、1。
 
@@ -813,7 +813,7 @@ Cache-Control: max-age=31536000
 
 现在 IE9、Opera、Firefox、Chrome 和 Safari 都支持 DOM 事件流。
 
-![img](1-20201222215455580)
+![img](images/DOM-事件流.jpg)
 
 点击下述页面的按钮，依次弹出 2、1、3。
 
