--- a/网络.md
+++ b/网络.md
@@ -203,7 +203,7 @@ HTTP 连接是单向的，HTTP 协议是一个请求-响应协议，只能由客
 
 H5 新增协议，主要特点是：服务器与客户端均可以互相向对方发送消息，是完全的平等对话，全双工通信。
 
-![img](bg2017051502.png)
+![img](images/websocket.png)
 
 ### 特点
 
@@ -667,7 +667,7 @@ HTTP劫持现象：访问着github页面，右下角出现弹窗小广告。
 4. 向所有 `stackexchange.com.` 的域名解析服务器发送请求，查询 `math.stackexchange.com.` 的 IP 地址。
 5. 查到指定域名的 IP 地址，查询结束。
 
-![image-20201217215740874](image-20201217215740874.png)
+![dig 命令](images/dig.png)
 
 有图可知，114.114.114.114:53 是本机的域名解析服务器，53 是默认端口。NS = Name Server，A = Address。
 
