--- a/浏览器.md
+++ b/浏览器.md
@@ -183,14 +183,14 @@ JS 中 `encodeURIComponent`/`decodeURIComponent` 进行编码和解码.
 `method` 属性为 `POST` 时，提交表单的 `HTTP` 请求会使用 `POST` 方法并将查询字符串放在请求正文.
 
 ```http
-GET /list_1437.html HTTP/1.1
+POST /list_1437.html HTTP/1.1
 Content-Length: 24
 Content-Type: application/x-www-form-urlencoded
 
 name=Mary&message=Yes%3F
 ```
 
-`GET` 请求应该用于没有副作用仅仅是要求信息的请求，更改服务器内容的请求应使用例如 `POST` 请求或者其他.
+`GET` 请求应该用于没有副作用仅仅是要求信息的请求，更改服务器内容的请求应使用例如 `POST` 请求或者其他。
 
 # 浏览器
 
@@ -905,4 +905,23 @@ Cache-Control: max-age=31536000
    })
    ```
 
-   
+
+## 白屏首屏时间计算
+
+### 白屏时间
+
+输入地址点击访问→屏幕出现第一个元素或字符（开始显示内容）
+
+> 计算
+
+白屏结束时间点：浏览器开始渲染 <body> 或者解析完 <head> 的时刻
+
+### 首屏时间
+
+输入地址点击访问→浏览器第一屏渲染完成，影响用户体验的重要元素。
+
+> 计算
+
+1. 首屏模块标签标记法
+2. 统计首屏内加载最慢的图片的时间
+3. 自定义首屏内容计算法
