--- a/浏览器.md
+++ b/浏览器.md
@@ -716,11 +716,16 @@ Cache-Control: max-age=31536000
 
 参考：https://www.jianshu.com/p/54cc04190252
 
-## 浏览器事件流
+## Web Worker
 
-从页面中接受事件的顺序，IE（事件冒泡流）、NetScape（事件捕获流） 提出的事件流完全相反。
 
-### IE（事件冒泡流）
+## 浏览器事件
+
+### 事件流
+
+JS 与 HTML 的交互通过事件实现，事件流描述了从页面中接受事件的顺序，IE（事件冒泡流）、NetScape（事件捕获流） 提出的事件流完全相反。
+
+#### IE（事件冒泡流）
 
 从最具体元素开始，逐渐向上传播至文档节点。
 
@@ -761,17 +766,11 @@ Cache-Control: max-age=31536000
 
 ```
 
-> addEventListener(EventName, Callback, BoolVal)
->
-> 为DOM2级事件处理程序，它接受三个参数：要处理的事件名、作为事件处理程序的函数和一个布尔值。
->
-> 最后这个布尔值参数如果是 true，表示在捕获阶段调用事件处理程序；如果是 false，表示在冒泡阶段调用事件处理程序。
+#### NetScape（事件捕获流）
 
-### NetScape（事件捕获流）
+从文档节点开始，逐渐向下传播至最具体元素。事件捕获实际上是为了在事件到达最终目标之前拦截事件。
 
-从文档节点开始，逐渐向下传播至最具体元素。
-
-![img](images/捕获.jpg)
+s![img](images/捕获.jpg)
 
 点击下述页面的按钮，依次弹出 3、2、1。
 
@@ -808,7 +807,7 @@ Cache-Control: max-age=31536000
 
 ```
 
-### DOM 事件流
+#### DOM 事件流
 
 “DOM2 级事件”标准中规定，事件流包括三个阶段：事件捕获阶段、处于目标阶段和事件冒泡阶段。
 
@@ -857,11 +856,148 @@ Cache-Control: max-age=31536000
 </html>
 ```
 
-## Web Worker
+### 事件处理程序
+
+也叫事件监听器，是响应用户或者浏览器事件而调用的以 on 开头的函数。
+
+#### HTML 事件处理程序
+
+特定元素支持的事件可以用 `HTML` 属性的形式进行处理。
+
+```html
+<input type="button" value="click me" onclick="console.log("click event")" />
+```
+
+#### DOM0 事件处理程序
+
+在 js 中创建监听器的传统方式是：把一个函数赋值给 `DOM` 元素，兼容性最好。
+
+每个元素（包括 `window` 和 `document`）都有事件处理程序属性，这个属性值是一个函数。
+
+`DOM0` 事件处理注册在**事件流冒泡阶段**的事件。
+
+```javascript
+const btn = document.getElementById("myBtn");
+btn.onclick = function(){
+  // this 指向 btn 元素
+  console.log('Clicked')
+}
+// onclick 被赋予多个值，只以最后一个值为准
+btn.onclick = null; // 移除该 DOM0 事件监听器
+```
+
+#### DOM2 事件处理程序
+
+也可以通过在所有 `DOM` 节点上使用 `addEventListener()` 和 `removeEventListener()` 来添加和移除事件监听器。后者使用时需要与前者的三个参数值均相同才能移除前者，所以如果前者事件处理函数是匿名函数的话，后者是不能移除的。
+
+以 `addEventListener` 为例：
+
+`addEventListener(EventName, Callback, BoolVal)`接受三个参数：要处理的事件名、作为事件处理程序的函数和一个布尔值。
+
+最后的布尔值参数是 `true`，表示在捕获阶段调用事件处理程序，是 `false`（默认值，跨浏览器兼容性好），表示在冒泡阶段调用事件处理程序。
+
+```javascript
+const btn = document.getElementById("myBtn");
+
+// 为元素添加会在冒泡阶段触发的 onclick 事件处理程序
+btn.addEventListener("click", () => {
+  console.log("clicked");
+}, false);
+
+btn.addEventListener("click", () => {
+  console.log("this.id")
+});
+
+// 在事件到达目标之前触发事件监听器，事件被拦截到
+btn.addEventListener("click", () => {
+  console.log("this.id")
+}, true);
+
+```
+
+使用 DOM2 事件处理程序的优点是可以给一个元素添加多个事件处理程序，并按添加的顺序触发。
+
+#### IE 事件处理程序
+
+`attachEvent()` 和 `detachEvent()`，添加在**冒泡阶段**。
+
+`attachEvent(EventFunc, Callback)`接受两个参数：事件处理程序名和作为事件处理程序的函数。
+
+```javascript
+const btn = document.getElementById("myBtn");
+
+btn.attachEvent("onclick", function(){
+  console.log("Clicked");
+})
+
+```
+
+与 DOM2 事件处理程序不同点：
+
+* 作用域：attachEvent() 在全局运行，其 this 是 window；
+* 执行顺序：IE 事件处理程序的执行顺序和添加顺序是相反的；
+
+### 事件对象
+
+在 DOM 中发生事件时，事件的相关信息都会被记录到一个叫做 event 对象中，包含事件的基本信息：触发事件的元素、事件类型和其他数据，所有浏览器均支持 event 对象。
+
+```javascript
+btn.onclick = function(event){
+  console.log(event.type)
+}
+
+btn.addEventListener("click", () => {
+  console.log(event.type);
+}, false);
+
+```
+
+#### DOM 事件对象
+
+在 `DOM` 事件处理程序内部，`preventDefault()` 方法阻止特定事件的默认行为（比如点击链接跳转至相应页面），`stopPropagation()` 方法阻止事件流在 DOM 结构中的继续传播，取消后续的事件捕获或冒泡。
+
+```javascript
+// 阻止事件的默认行为
+const link = document.getElementById("myLink");
+
+link.onclick = function(event){
+  event.preventDefault();
+}
+
+// 阻止事件的继续传播
+const btn = document.getElementById("myBtn");
+
+btn.addEventListener("click", () => {
+  console.log("clicked");
+  event.stopPropagation();
+}, false);
+
+// body 元素监听的事件不会触发
+document.body.addEventListener("click", () => {
+  console.log("body clicked");
+}, false);
+
+```
+
+#### IE 事件对象
+
+在 IE 浏览器中，事件对象根据使用的事件处理程序不同而不同。
+
+* 使用 `DOM0` 事件处理程序，`event` 对象是全局对象 `window` 的一个属性。
+* 使用 `attachEvent()`/HTML 属性方法设置事件处理程序，event 会作为唯一参数传递给事件处理函数（`event` 仍然是 `window` 的属性，为了方便将其作参数传入）
+
+### 阻止事件穿透
+
+在弹出层弹出之后，滚动页面，底层元素会跟着一起滚动。
+
+解决方法：
+
+* 阻止事件穿透。设置 **`addEventListener`** 的第三个参数 **`passive: true`**，在捕获阶段调用事件处理程序而不是冒泡阶段，这样就能在监听到底层元素滚动事件时，阻止其滚动。
+* 设置 `body` 的 `overflow:hidden`。在弹窗出现时，修改底部元素的样式为不滑动，等到弹窗消失时再将底层元素样式修改回去。
 
 ## 点击穿透
 
-上层元素监听 touchend 事件，导致元素消失，300 ms 后会触发 click 事件，触发下层元素的 click 事件。之所以有 300 ms 是因为为了检测用户是否要双击进行方法缩小操作。
+上层元素监听 `touchend` 事件，导致元素消失，300 ms 后会触发 `click` 事件，触发下层元素的 `click` 事件。之所以有 300 ms 是因为为了检测用户是否要双击进行方法缩小操作。
 
 解决：
 
@@ -882,9 +1018,9 @@ Cache-Control: max-age=31536000
    }
    ```
 2. 上层元素触发 `touchend` 后延迟 300 ms 后再消失
-3. 让下层元素短时间内无法触发 click 事件
+3. 让下层元素短时间内无法触发 `click` 事件
 
-   CSS3 属性：`pointer-events`，先设置为 none 再设置为 auto。
+   CSS3 属性：`pointer-events`，先设置为 `none` 再设置为 `auto`。
 
    ```javascript
    // 当蒙层被点击的时候，下层元素就暂时使 click 失效
